--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,12 @@ assets
 assets/bpm_libs.js
 assets/bpm_styles.css
 coverage
-dist
+dist/es
+dist/jquery
+dist/node
+dist/qunit
+dist/tests
+.history
 docs
 lib/*/tests/all.js
 lib/*/tests/qunit*
